apps/argocd/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.org/ssl-services: "argocd-server"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.gw-cloud.org
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
  # Local Cluster
  - host: cd.local-1.vm
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
